[[example]]
name = 'simple'

[dependencies]
once_cell = '1'
rusttype = '0.9.2'
vector2math = '0.13.0'

[dependencies.piston2d-graphics]
optional = true
version = '0.41.0'

[dev-dependencies]
graphics_buffer = '0.7.7'

[features]
default = ['graphics']
graphics = ['piston2d-graphics']

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = ['gui', 'rendering']
description = 'Fit text inside a rectangle'
documentation = 'https://docs.rs/fit-text/'
edition = '2018'
keywords = ['text', 'align', 'render', 'font', 'word']
license = 'MIT'
name = 'fit_text'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/fit-text'
version = '0.3.3'
